@@ -10,38 +10,42 @@ import dev.thoq.module.setting.Setting;
 import dev.thoq.util.font.AlyaFontRenderer;
 import dev.thoq.util.render.RenderUtility;
 import net.minecraft.client.gui.GuiScreen;
+import net.minecraft.client.renderer.GlStateManager;
+import net.minecraft.util.ResourceLocation;
 import org.lwjgl.input.Keyboard;
-import net.minecraft.client.gui.GuiScreen;
 
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-@SuppressWarnings("MismatchedQueryAndUpdateOfCollection")
+@SuppressWarnings({"MismatchedQueryAndUpdateOfCollection", "SameParameterValue"})
 public final class ClickGUIScreen extends GuiScreen {
-    private static final int PANEL_WIDTH = 100;
-    private static final int PANEL_HEIGHT = 16;
-    private static final int MODULE_HEIGHT = 14;
-    private static final int SETTING_HEIGHT = 11;
+
+    private static final int PANEL_WIDTH = 110;
+    private static final int PANEL_HEIGHT = 20;
+    private static final int MODULE_HEIGHT = 16;
+    private static final int SETTING_HEIGHT = 10;
     private static final int SETTING_GROUP_PADDING = 2;
-    private static final int PANEL_SPACING = 115;
+    private static final int PANEL_SPACING = 130;
     private static final int SETTING_INDENT = 6;
     private static final int BACKGROUND_COLOR = 0xFF181A17;
     private static final int MODULE_BACKGROUND_COLOR = 0xFF232623;
     private static final int SETTING_BACKGROUND_COLOR = 0xFF111311;
     private static final int HOVER_TINT = 0x20FFFFFF;
     private static final int TEXT_COLOR = 0xFFCCCCCC;
-    private static final float BORDER_WIDTH = 0.5f;
-    private static final int DEFAULT_CATEGORY_COLOR = 0xFF666666;
+    private static final float BORDER_WIDTH = 0.7F;
+    private static final int DEFAULT_CATEGORY_COLOR = 0x20444444;
+    private static final int ICON_SIZE = 7;
 
-    private static final AlyaFontRenderer fontMedium = Alya.getInstance().getFontRendererSmall();
-    private static final AlyaFontRenderer fontSmall = Alya.getInstance().getFontRendererTiny();
+    //note: hides Gui.font
+    private static final AlyaFontRenderer font = new AlyaFontRenderer("Alya/Fonts/Lato-Bold.ttf", 7.5F);
+    private static final AlyaFontRenderer settingsFont = new AlyaFontRenderer("Alya/Fonts/Lato-Bold.ttf", 6.5F);
     private static final Map<Category, Integer> CATEGORY_COLORS = new HashMap<>();
 
     static {
         CATEGORY_COLORS.put(Category.COMBAT, 0xFFE74C3C);
-        CATEGORY_COLORS.put(Category.MOVEMENT, 0xFF2ECC71);
+        CATEGORY_COLORS.put(Category.MOVEMENT, 0xFF219150);
         CATEGORY_COLORS.put(Category.PLAYER, 0xFF8E44AD);
         CATEGORY_COLORS.put(Category.VISUAL, 0xFF3700CE);
         CATEGORY_COLORS.put(Category.EXPLOIT, 0xFF4697DB);
@@ -64,7 +68,7 @@ public final class ClickGUIScreen extends GuiScreen {
         int positionX = 4;
         for(final Category category : Category.values()) {
             panelPositions.put(category, new int[]{positionX, 4});
-            expandedCategories.put(category, true);
+            expandedCategories.put(category, false);
             positionX += PANEL_SPACING;
         }
     }
@@ -89,81 +93,107 @@ public final class ClickGUIScreen extends GuiScreen {
             position[0] = panelX;
             position[1] = panelY;
         }
-        final List<Module> modules =
-                Alya.getInstance().getModuleManager().getModulesByCategory(category);
+        final List<Module> modules = Alya.getInstance().getModuleManager().getModulesByCategory(category);
         if(modules == null) return;
         int totalHeight = PANEL_HEIGHT;
         if(expandedCategories.get(category)) {
-            for(final Module module : modules) {
-                totalHeight += MODULE_HEIGHT;
-                if(expandedModules.getOrDefault(module, false)) {
-                    boolean hasVisibleSettings = false;
-                    for(final Setting<?> setting : module.getSettings()) {
-                        if(setting.isVisible()) {
-                            totalHeight += SETTING_HEIGHT;
-                            hasVisibleSettings = true;
-                        }
-                    }
-                    if(hasVisibleSettings) {
-                        totalHeight += SETTING_GROUP_PADDING * 2;
-                    }
-                }
-            }
-            totalHeight += 1;
+            totalHeight += calculateExpandedHeight(modules) + 1;
         }
+        renderPanelHeader(category, panelX, panelY);
+        if(expandedCategories.get(category)) {
+            renderExpandedModules(modules, panelX, panelY + PANEL_HEIGHT, category, mouseX, mouseY);
+        }
+        RenderUtility.drawRectOutline(panelX, panelY, PANEL_WIDTH, totalHeight, getCategoryColor(category), BORDER_WIDTH);
+    }
+
+    private void renderPanelHeader(final Category category, final int panelX, final int panelY) {
         RenderUtility.drawRect(panelX, panelY, PANEL_WIDTH, PANEL_HEIGHT, BACKGROUND_COLOR);
         final String categoryName = category.getDisplayName().toLowerCase();
-        fontMedium.drawString(categoryName, panelX + 4, panelY + 5, TEXT_COLOR);
+        font.drawString(categoryName, panelX + 4, panelY + 5, TEXT_COLOR);
+        final int categoryColor = getCategoryColor(category);
+        final float r = (categoryColor >> 16 & 0xFF) / 255.0F;
+        final float g = (categoryColor >> 8 & 0xFF) / 255.0F;
+        final float b = (categoryColor & 0xFF) / 255.0F;
+        final int iconY = panelY + (PANEL_HEIGHT - ICON_SIZE) / 2;
+        GlStateManager.color(r, g, b, 1.0F);
+        RenderUtility.drawImage(
+                new ResourceLocation("Alya/Icons/Categories/" + categoryName + "_good.png"),
+                panelX + PANEL_WIDTH - ICON_SIZE - 4, iconY, ICON_SIZE, ICON_SIZE);
+        final boolean expanded = expandedCategories.get(category);
+        if(expanded) {
+            GlStateManager.color(r, g, b, 1.0F);
+        } else {
+            GlStateManager.color(46 / 255.0F, 46 / 255.0F, 46 / 255.0F, 1.0F);
+        }
+        final String eyeIconName = expanded ? "eye_open.png" : "eye_close.png";
+        RenderUtility.drawImage(
+                new ResourceLocation("Alya/Icons/" + eyeIconName),
+                panelX + PANEL_WIDTH - (ICON_SIZE * 2) - 6, iconY, ICON_SIZE, ICON_SIZE);
+    }
 
-        final int catColor = getCategoryColor(category);
-        final float catR = (catColor >> 16 & 0xFF) / 255.0F;
-        final float catG = (catColor >> 8 & 0xFF) / 255.0F;
-        final float catB = (catColor & 0xFF) / 255.0F;
-
-        final net.minecraft.util.ResourceLocation categoryIcon =
-                new net.minecraft.util.ResourceLocation(
-                        "Alya/Icons/Categories/" + categoryName + "_good.png");
-        net.minecraft.client.renderer.GlStateManager.color(catR, catG, catB, 1.0F);
-        RenderUtility.drawImage(categoryIcon, panelX + PANEL_WIDTH - 12, panelY + 5, 6, 6);
-
-        final String eyeIconName = expandedCategories.get(category) ? "eye_open.png" : "eye_close.png";
-        final net.minecraft.util.ResourceLocation eyeIcon =
-                new net.minecraft.util.ResourceLocation("Alya/Icons/" + eyeIconName);
-        net.minecraft.client.renderer.GlStateManager.color(catR, catG, catB, 1.0F);
-        RenderUtility.drawImage(eyeIcon, panelX + PANEL_WIDTH - 20, panelY + 5, 6, 6);
-
-        if(expandedCategories.get(category)) {
-            int currentY = panelY + PANEL_HEIGHT;
-            for(final Module module : modules) {
-                renderModuleButton(module, panelX, currentY, category, mouseX, mouseY);
-                currentY += MODULE_HEIGHT;
-                if(expandedModules.getOrDefault(module, false)) {
-                    RenderUtility.drawRect(
-                            panelX + 1,
-                            currentY,
-                            PANEL_WIDTH - 2,
-                            SETTING_GROUP_PADDING,
-                            SETTING_BACKGROUND_COLOR);
-                    currentY += SETTING_GROUP_PADDING;
-                    for(final Setting<?> setting : module.getSettings()) {
-                        if(setting.isVisible()) {
-                            renderSettingButton(setting, panelX, currentY, category, mouseX, mouseY);
-                            currentY += SETTING_HEIGHT;
-                        }
-                    }
-                    RenderUtility.drawRect(
-                            panelX + 1,
-                            currentY,
-                            PANEL_WIDTH - 2,
-                            SETTING_GROUP_PADDING,
-                            SETTING_BACKGROUND_COLOR);
-                    currentY += SETTING_GROUP_PADDING;
-                }
+    private int calculateExpandedHeight(final List<Module> modules) {
+        int height = 0;
+        for(final Module module : modules) {
+            height += MODULE_HEIGHT;
+            if(expandedModules.getOrDefault(module, false)) {
+                height += calculateModuleSettingsHeight(module);
             }
         }
-        final int categoryColor = getCategoryColor(category);
-        RenderUtility.drawRectOutline(
-                panelX, panelY, PANEL_WIDTH, totalHeight, categoryColor, BORDER_WIDTH);
+        return height;
+    }
+
+    private int calculateModuleSettingsHeight(final Module module) {
+        int visibleCount = 0;
+        for(final Setting<?> setting : module.getSettings()) {
+            if(setting.isVisible()) visibleCount++;
+        }
+        if(visibleCount == 0) return 0;
+        return visibleCount * SETTING_HEIGHT + SETTING_GROUP_PADDING * 2;
+    }
+
+    private int countVisibleSettings(final Module module) {
+        int count = 0;
+        for(final Setting<?> setting : module.getSettings()) {
+            if(setting.isVisible()) count++;
+        }
+        return count;
+    }
+
+    private void renderExpandedModules(
+            final List<Module> modules,
+            final int panelX,
+            final int startY,
+            final Category category,
+            final int mouseX,
+            final int mouseY) {
+        int currentY = startY;
+        for(final Module module : modules) {
+            renderModuleButton(module, panelX, currentY, category, mouseX, mouseY);
+            currentY += MODULE_HEIGHT;
+            if(expandedModules.getOrDefault(module, false)) {
+                currentY = renderModuleSettings(module, panelX, currentY, category, mouseX, mouseY);
+            }
+        }
+    }
+
+    private int renderModuleSettings(
+            final Module module,
+            final int panelX,
+            final int startY,
+            final Category category,
+            final int mouseX,
+            final int mouseY) {
+        int currentY = startY;
+        RenderUtility.drawRect(panelX + 1, currentY, PANEL_WIDTH - 2, SETTING_GROUP_PADDING, SETTING_BACKGROUND_COLOR);
+        currentY += SETTING_GROUP_PADDING;
+        for(final Setting<?> setting : module.getSettings()) {
+            if(!setting.isVisible()) continue;
+            renderSettingButton(setting, panelX, currentY, category, mouseX, mouseY);
+            currentY += SETTING_HEIGHT;
+        }
+        RenderUtility.drawRect(panelX + 1, currentY, PANEL_WIDTH - 2, SETTING_GROUP_PADDING, SETTING_BACKGROUND_COLOR);
+        currentY += SETTING_GROUP_PADDING;
+        return currentY;
     }
 
     private void renderModuleButton(
@@ -174,7 +204,6 @@ public final class ClickGUIScreen extends GuiScreen {
             final int mouseX,
             final int mouseY) {
         final boolean extended = expandedModules.getOrDefault(module, false);
-        final boolean hasSettings = !module.getSettings().isEmpty();
         if(!extended) {
             final int backgroundColor =
                     module.isEnabled() ? getCategoryColor(category) : MODULE_BACKGROUND_COLOR;
@@ -184,13 +213,13 @@ public final class ClickGUIScreen extends GuiScreen {
             RenderUtility.drawRect(
                     positionX + 1, positionY, PANEL_WIDTH - 2, MODULE_HEIGHT, BACKGROUND_COLOR);
         }
-        if(isMouseOver(mouseX, mouseY, positionX, positionY, MODULE_HEIGHT)) {
+        if(isMouseOver(mouseX, mouseY, positionX, positionY, MODULE_HEIGHT) && !expandedModules.getOrDefault(module, false)) {
             RenderUtility.drawRect(positionX + 1, positionY, PANEL_WIDTH - 2, MODULE_HEIGHT, HOVER_TINT);
         }
         final String moduleName = module.getName().toLowerCase().replace(" ", "");
         final int textColor =
                 extended ? (module.isEnabled() ? getCategoryColor(category) : TEXT_COLOR) : TEXT_COLOR;
-        fontMedium.drawString(moduleName, positionX + 4, positionY + 5, textColor);
+        font.drawString(moduleName, positionX + 4, positionY + 5, textColor);
     }
 
     private void renderSettingButton(
@@ -206,8 +235,7 @@ public final class ClickGUIScreen extends GuiScreen {
                 positionX + 1, positionY, PANEL_WIDTH - 2, SETTING_HEIGHT, SETTING_BACKGROUND_COLOR);
         final int textX = settingX + 3;
         final int settingRight = positionX + PANEL_WIDTH - SETTING_INDENT;
-        if(setting instanceof BooleanSetting) {
-            final BooleanSetting booleanSetting = (BooleanSetting) setting;
+        if(setting instanceof BooleanSetting booleanSetting) {
             if(booleanSetting.isEnabled()) {
                 RenderUtility.drawRect(
                         settingX, positionY, settingWidth, SETTING_HEIGHT, getCategoryColor(category));
@@ -215,73 +243,110 @@ public final class ClickGUIScreen extends GuiScreen {
             if(isMouseOver(mouseX, mouseY, positionX, positionY, SETTING_HEIGHT)) {
                 RenderUtility.drawRect(settingX, positionY, settingWidth, SETTING_HEIGHT, HOVER_TINT);
             }
-            fontSmall.drawString(setting.getName(), textX, positionY + 3, TEXT_COLOR);
-        } else if(setting instanceof ModeSetting) {
-            final ModeSetting modeSetting = (ModeSetting) setting;
-            fontSmall.drawString(setting.getName(), textX, positionY + 3, TEXT_COLOR);
+            settingsFont.drawString(setting.getName(), textX, positionY + 1, TEXT_COLOR);
+        } else if(setting instanceof ModeSetting modeSetting) {
+            settingsFont.drawString(setting.getName(), textX, positionY + 1, TEXT_COLOR);
             final String modeValue = modeSetting.getValue();
-            final float modeWidth = fontSmall.getStringWidth(modeValue);
-            fontSmall.drawString(modeValue, settingRight - modeWidth - 2, positionY + 3, TEXT_COLOR);
+            final float modeWidth = settingsFont.getStringWidth(modeValue);
+            settingsFont.drawString(modeValue, settingRight - modeWidth - 2, positionY + 1, TEXT_COLOR);
             if(isMouseOver(mouseX, mouseY, positionX, positionY, SETTING_HEIGHT)) {
                 RenderUtility.drawRect(settingX, positionY, settingWidth, SETTING_HEIGHT, HOVER_TINT);
             }
-        } else if(setting instanceof NumberSetting) {
-            final NumberSetting numberSetting = (NumberSetting) setting;
-            numberSettingPositions.put(numberSetting, positionX);
-            final double value = numberSetting.getValue();
-            final double minimum = numberSetting.getMin();
-            final double maximum = numberSetting.getMax();
-            final int sliderWidth = settingWidth;
-            final int categoryColor = getCategoryColor(category);
-            final int nubWidth = 4;
-            final int nubColor = lightenColor(categoryColor, 0.4f);
-            if(numberSetting.isRangeEnabled()) {
-                final double secondValue = numberSetting.getSecondValue();
-                final double loVal = Math.min(value, secondValue);
-                final double hiVal = Math.max(value, secondValue);
-                final double loPercentage = (loVal - minimum) / (maximum - minimum);
-                final double hiPercentage = (hiVal - minimum) / (maximum - minimum);
-                final int fillStart = (int) (loPercentage * sliderWidth);
-                final int fillEnd = (int) (hiPercentage * sliderWidth);
-                RenderUtility.drawRect(
-                        settingX + fillStart, positionY, fillEnd - fillStart, SETTING_HEIGHT, categoryColor);
-                final int nub1X =
-                        settingX + (int) (((value - minimum) / (maximum - minimum)) * sliderWidth) - 2;
-                final int nub2X =
-                        settingX + (int) (((secondValue - minimum) / (maximum - minimum)) * sliderWidth) - 2;
-                RenderUtility.drawRect(
-                        Math.max(settingX, nub1X), positionY, nubWidth, SETTING_HEIGHT, nubColor);
-                RenderUtility.drawRect(
-                        Math.max(settingX, nub2X), positionY, nubWidth, SETTING_HEIGHT, nubColor);
-                final String displayValue =
-                        Math.round(loVal * 100.0) / 100.0 + "-" + Math.round(hiVal * 100.0) / 100.0;
-                fontSmall.drawString(setting.getName(), textX, positionY + 3, TEXT_COLOR);
-                final float valueWidth = fontSmall.getStringWidth(displayValue);
-                fontSmall.drawString(
-                        displayValue, settingRight - valueWidth - 2, positionY + 3, TEXT_COLOR);
-            } else {
-                final double percentage = (value - minimum) / (maximum - minimum);
-                final int fillWidth = (int) (percentage * sliderWidth);
-                RenderUtility.drawRect(settingX, positionY, fillWidth, SETTING_HEIGHT, categoryColor);
-                final int nubX = settingX + fillWidth - 2;
-                RenderUtility.drawRect(
-                        Math.max(settingX, nubX), positionY, nubWidth, SETTING_HEIGHT, nubColor);
-                final String displayValue = String.valueOf(Math.round(value * 100.0) / 100.0);
-                fontSmall.drawString(setting.getName(), textX, positionY + 3, TEXT_COLOR);
-                final float valueWidth = fontSmall.getStringWidth(displayValue);
-                fontSmall.drawString(
-                        displayValue, settingRight - valueWidth - 2, positionY + 3, TEXT_COLOR);
-            }
-            if(isMouseOver(mouseX, mouseY, positionX, positionY, SETTING_HEIGHT)) {
-                RenderUtility.drawRect(settingX, positionY, sliderWidth, SETTING_HEIGHT, HOVER_TINT);
-            }
+        } else if(setting instanceof NumberSetting numberSetting) {
+            renderNumberSetting(numberSetting, setting, positionX, positionY, settingX, settingWidth, settingRight, textX, category, mouseX, mouseY);
         }
+    }
+
+    private void renderNumberSetting(
+            final NumberSetting numberSetting,
+            final Setting<?> setting,
+            final int positionX,
+            final int positionY,
+            final int settingX,
+            final int settingWidth,
+            final int settingRight,
+            final int textX,
+            final Category category,
+            final int mouseX,
+            final int mouseY) {
+        numberSettingPositions.put(numberSetting, positionX);
+        final double value = numberSetting.getValue();
+        final double minimum = numberSetting.getMin();
+        final double maximum = numberSetting.getMax();
+        final int categoryColor = getCategoryColor(category);
+        final int nubWidth = 4;
+        final int nubColor = lightenColor(categoryColor, 0.4f);
+        if(numberSetting.isRangeEnabled()) {
+            renderRangeNumberSetting(numberSetting, setting, positionY, settingX, settingWidth, settingRight, textX, value, minimum, maximum, categoryColor, nubWidth, nubColor);
+        } else {
+            renderSingleNumberSetting(setting, positionY, settingX, settingWidth, settingRight, textX, value, minimum, maximum, categoryColor, nubWidth, nubColor);
+        }
+        if(isMouseOver(mouseX, mouseY, positionX, positionY, SETTING_HEIGHT)) {
+            RenderUtility.drawRect(settingX, positionY, settingWidth, SETTING_HEIGHT, HOVER_TINT);
+        }
+    }
+
+    private void renderRangeNumberSetting(
+            final NumberSetting numberSetting,
+            final Setting<?> setting,
+            final int positionY,
+            final int settingX,
+            final int settingWidth,
+            final int settingRight,
+            final int textX,
+            final double value,
+            final double minimum,
+            final double maximum,
+            final int categoryColor,
+            final int nubWidth,
+            final int nubColor) {
+        final double secondValue = numberSetting.getSecondValue();
+        final double loVal = Math.min(value, secondValue);
+        final double hiVal = Math.max(value, secondValue);
+        final double loPercentage = (loVal - minimum) / (maximum - minimum);
+        final double hiPercentage = (hiVal - minimum) / (maximum - minimum);
+        final int fillStart = (int) (loPercentage * settingWidth);
+        final int fillEnd = (int) (hiPercentage * settingWidth);
+        RenderUtility.drawRect(settingX + fillStart, positionY, fillEnd - fillStart, SETTING_HEIGHT, categoryColor);
+        final int nub1X = settingX + (int) (((value - minimum) / (maximum - minimum)) * settingWidth) - 2;
+        final int nub2X = settingX + (int) (((secondValue - minimum) / (maximum - minimum)) * settingWidth) - 2;
+        RenderUtility.drawRect(Math.max(settingX, nub1X), positionY, nubWidth, SETTING_HEIGHT, nubColor);
+        RenderUtility.drawRect(Math.max(settingX, nub2X), positionY, nubWidth, SETTING_HEIGHT, nubColor);
+        final String displayValue = Math.round(loVal * 100.0) / 100.0 + "-" + Math.round(hiVal * 100.0) / 100.0;
+        settingsFont.drawString(setting.getName(), textX, positionY + 1, TEXT_COLOR);
+        final float valueWidth = settingsFont.getStringWidth(displayValue);
+        settingsFont.drawString(displayValue, settingRight - valueWidth - 2, positionY + 1, TEXT_COLOR);
+    }
+
+    private void renderSingleNumberSetting(
+            final Setting<?> setting,
+            final int positionY,
+            final int settingX,
+            final int settingWidth,
+            final int settingRight,
+            final int textX,
+            final double value,
+            final double minimum,
+            final double maximum,
+            final int categoryColor,
+            final int nubWidth,
+            final int nubColor) {
+        final double percentage = (value - minimum) / (maximum - minimum);
+        final int fillWidth = (int) (percentage * settingWidth);
+        RenderUtility.drawRect(settingX, positionY, fillWidth, SETTING_HEIGHT, categoryColor);
+        final int nubX = settingX + fillWidth - 2;
+        RenderUtility.drawRect(Math.max(settingX, nubX), positionY, nubWidth, SETTING_HEIGHT, nubColor);
+        final String displayValue = String.valueOf(Math.round(value * 100.0) / 100.0);
+        settingsFont.drawString(setting.getName(), textX, positionY + 1, TEXT_COLOR);
+        final float valueWidth = settingsFont.getStringWidth(displayValue);
+        settingsFont.drawString(displayValue, settingRight - valueWidth - 2, positionY + 1, TEXT_COLOR);
     }
 
     private int getCategoryColor(final Category category) {
         return CATEGORY_COLORS.getOrDefault(category, DEFAULT_CATEGORY_COLOR);
     }
 
+    @SuppressWarnings("SameParameterValue")
     private int lightenColor(final int color, final float amount) {
         int r = Math.min(255, (int) (((color >> 16) & 0xFF) + (255 - ((color >> 16) & 0xFF)) * amount));
         int g = Math.min(255, (int) (((color >> 8) & 0xFF) + (255 - ((color >> 8) & 0xFF)) * amount));
@@ -293,89 +358,129 @@ public final class ClickGUIScreen extends GuiScreen {
     protected void mouseClicked(final int mouseX, final int mouseY, final int mouseButton)
             throws IOException {
         for(final Category category : Category.values()) {
-            final int[] position = panelPositions.get(category);
-            if(position == null) continue;
-            final int panelX = position[0];
-            final int panelY = position[1];
-            if(isMouseOver(mouseX, mouseY, panelX, panelY, PANEL_HEIGHT)) {
-                if(mouseButton == 0) {
-                    dragging = true;
-                    draggingCategory = category;
-                    dragOffsetX = panelX - mouseX;
-                    dragOffsetY = panelY - mouseY;
-                } else if(mouseButton == 1) {
-                    expandedCategories.put(category, !expandedCategories.get(category));
-                }
-                return;
-            }
-            if(expandedCategories.get(category)) {
-                final List<Module> modules =
-                        Alya.getInstance().getModuleManager().getModulesByCategory(category);
-                if(modules != null) {
-                    int currentY = panelY + PANEL_HEIGHT;
-                    for(final Module module : modules) {
-                        if(isMouseOver(mouseX, mouseY, panelX, currentY, MODULE_HEIGHT)) {
-                            if(mouseButton == 0) {
-                                if(!(module instanceof ClickGUI)) {
-                                    module.toggle();
-                                }
-                            } else if(mouseButton == 1 && !module.getSettings().isEmpty()) {
-                                expandedModules.put(module, !expandedModules.getOrDefault(module, false));
-                            }
-                            return;
-                        }
-                        currentY += MODULE_HEIGHT;
-                        if(expandedModules.getOrDefault(module, false)) {
-                            currentY += SETTING_GROUP_PADDING;
-                            for(final Setting<?> setting : module.getSettings()) {
-                                if(setting.isVisible()) {
-                                    if(isMouseOver(mouseX, mouseY, panelX, currentY, SETTING_HEIGHT)) {
-                                        if(setting instanceof NumberSetting && mouseButton == 0) {
-                                            currentDraggedNumberSetting = (NumberSetting) setting;
-                                            currentDraggedSettingX = panelX;
-                                            if(currentDraggedNumberSetting.isRangeEnabled()) {
-                                                final int sliderStart = panelX + SETTING_INDENT;
-                                                final int sliderWidth = PANEL_WIDTH - SETTING_INDENT * 2;
-                                                final double pct =
-                                                        (double) Math.max(0, Math.min(mouseX - sliderStart, sliderWidth))
-                                                                / sliderWidth;
-                                                final double mouseVal =
-                                                        currentDraggedNumberSetting.getMin()
-                                                                + pct
-                                                                * (currentDraggedNumberSetting.getMax()
-                                                                - currentDraggedNumberSetting.getMin());
-                                                final double distFirst =
-                                                        Math.abs(mouseVal - currentDraggedNumberSetting.getValue());
-                                                final double distSecond =
-                                                        Math.abs(mouseVal - currentDraggedNumberSetting.getSecondValue());
-                                                draggingSecondNub = distSecond < distFirst;
-                                            } else {
-                                                draggingSecondNub = false;
-                                            }
-                                            updateNumberSettingFromMouse(mouseX);
-                                        } else {
-                                            handleSettingClick(setting, mouseButton);
-                                        }
-                                        return;
-                                    }
-                                    currentY += SETTING_HEIGHT;
-                                }
-                            }
-                            currentY += SETTING_GROUP_PADDING;
-                        }
-                    }
-                }
-            }
+            if(handleCategoryClick(category, mouseX, mouseY, mouseButton)) return;
         }
         super.mouseClicked(mouseX, mouseY, mouseButton);
     }
 
+    private boolean handleCategoryClick(
+            final Category category, final int mouseX, final int mouseY, final int mouseButton) {
+        final int[] position = panelPositions.get(category);
+        if(position == null) return false;
+        final int panelX = position[0];
+        final int panelY = position[1];
+        if(isMouseOver(mouseX, mouseY, panelX, panelY, PANEL_HEIGHT)) {
+            handlePanelHeaderClick(category, panelX, panelY, mouseX, mouseY, mouseButton);
+            return true;
+        }
+        if(!expandedCategories.get(category)) return false;
+        return handleExpandedModulesClick(category, panelX, panelY, mouseX, mouseY, mouseButton);
+    }
+
+    private void handlePanelHeaderClick(
+            final Category category,
+            final int panelX,
+            final int panelY,
+            final int mouseX,
+            final int mouseY,
+            final int mouseButton) {
+        if(mouseButton == 0) {
+            dragging = true;
+            draggingCategory = category;
+            dragOffsetX = panelX - mouseX;
+            dragOffsetY = panelY - mouseY;
+        } else if(mouseButton == 1) {
+            expandedCategories.put(category, !expandedCategories.get(category));
+        }
+    }
+
+    private boolean handleExpandedModulesClick(
+            final Category category,
+            final int panelX,
+            final int panelY,
+            final int mouseX,
+            final int mouseY,
+            final int mouseButton) {
+        final List<Module> modules = Alya.getInstance().getModuleManager().getModulesByCategory(category);
+        if(modules == null) return false;
+        int currentY = panelY + PANEL_HEIGHT;
+        for(final Module module : modules) {
+            if(isMouseOver(mouseX, mouseY, panelX, currentY, MODULE_HEIGHT)) {
+                handleModuleClick(module, mouseButton);
+                return true;
+            }
+            currentY += MODULE_HEIGHT;
+            if(expandedModules.getOrDefault(module, false)) {
+                currentY += SETTING_GROUP_PADDING;
+                if(tryHandleSettingClick(module, panelX, currentY, mouseX, mouseY, mouseButton)) return true;
+                currentY += countVisibleSettings(module) * SETTING_HEIGHT + SETTING_GROUP_PADDING;
+            }
+        }
+        return false;
+    }
+
+    private void handleModuleClick(final Module module, final int mouseButton) {
+        if(mouseButton == 0) {
+            if(!(module instanceof ClickGUI)) module.toggle();
+        } else if(mouseButton == 1 && !module.getSettings().isEmpty()) {
+            expandedModules.put(module, !expandedModules.getOrDefault(module, false));
+        }
+    }
+
+    private boolean tryHandleSettingClick(
+            final Module module,
+            final int panelX,
+            final int startY,
+            final int mouseX,
+            final int mouseY,
+            final int mouseButton) {
+        int currentY = startY;
+        for(final Setting<?> setting : module.getSettings()) {
+            if(!setting.isVisible()) continue;
+            if(isMouseOver(mouseX, mouseY, panelX, currentY, SETTING_HEIGHT)) {
+                handleSettingInteraction(setting, panelX, mouseX, mouseButton);
+                return true;
+            }
+            currentY += SETTING_HEIGHT;
+        }
+        return false;
+    }
+
+    private void handleSettingInteraction(
+            final Setting<?> setting, final int panelX, final int mouseX, final int mouseButton) {
+        if(setting instanceof NumberSetting && mouseButton == 0) {
+            currentDraggedNumberSetting = (NumberSetting) setting;
+            currentDraggedSettingX = panelX;
+            if(currentDraggedNumberSetting.isRangeEnabled()) {
+                final double mouseVal = getMouseVal(mouseX, panelX);
+                final double distFirst = Math.abs(mouseVal - currentDraggedNumberSetting.getValue());
+                final double distSecond = Math.abs(mouseVal - currentDraggedNumberSetting.getSecondValue());
+                draggingSecondNub = distSecond < distFirst;
+            } else {
+                draggingSecondNub = false;
+            }
+            updateNumberSettingFromMouse(mouseX);
+        } else {
+            handleSettingClick(setting, mouseButton);
+        }
+    }
+
+    private double getMouseVal(int mouseX, int panelX) {
+        final int sliderStart = panelX + SETTING_INDENT;
+        final int sliderWidth = PANEL_WIDTH - SETTING_INDENT * 2;
+        final double pct =
+                (double) Math.clamp(mouseX - sliderStart, 0, sliderWidth)
+                        / sliderWidth;
+        return currentDraggedNumberSetting.getMin()
+                + pct
+                * (currentDraggedNumberSetting.getMax()
+                - currentDraggedNumberSetting.getMin());
+    }
+
     private void handleSettingClick(final Setting<?> setting, final int mouseButton) {
-        if(setting instanceof BooleanSetting) {
-            final BooleanSetting booleanSetting = (BooleanSetting) setting;
+        if(setting instanceof BooleanSetting booleanSetting) {
             booleanSetting.toggle();
-        } else if(setting instanceof ModeSetting) {
-            final ModeSetting modeSetting = (ModeSetting) setting;
+        } else if(setting instanceof ModeSetting modeSetting) {
             if(mouseButton == 0) {
                 modeSetting.cycle();
             } else if(mouseButton == 1) {
@@ -413,23 +518,30 @@ public final class ClickGUIScreen extends GuiScreen {
     }
 
     private void updateNumberSettingFromMouse(final int mouseX) {
-        if(currentDraggedNumberSetting == null) return;
-        final int settingX = currentDraggedSettingX + SETTING_INDENT;
-        final int sliderStart = settingX;
+        if(currentDraggedNumberSetting == null) {
+            return;
+        }
+        final int sliderStart = currentDraggedSettingX + SETTING_INDENT;
         final int sliderWidth = PANEL_WIDTH - SETTING_INDENT * 2;
+        double newValue = getNewValue(mouseX, sliderStart, sliderWidth);
+        if(draggingSecondNub) {
+            currentDraggedNumberSetting.setSecondValue(newValue);
+        } else {
+            currentDraggedNumberSetting.setValue(newValue);
+        }
+    }
+
+    @SuppressWarnings("SameParameterValue")
+    private double getNewValue(int mouseX, int sliderStart, int sliderWidth) {
         int relativeX = mouseX - sliderStart;
-        relativeX = Math.max(0, Math.min(relativeX, sliderWidth));
+        relativeX = Math.clamp(relativeX, 0, sliderWidth);
         final double percentage = (double) relativeX / sliderWidth;
         final double minimum = currentDraggedNumberSetting.getMin();
         final double maximum = currentDraggedNumberSetting.getMax();
         final double increment = currentDraggedNumberSetting.getIncrement();
         double newValue = minimum + (percentage * (maximum - minimum));
         newValue = Math.round(newValue / increment) * increment;
-        if(draggingSecondNub) {
-            currentDraggedNumberSetting.setSecondValue(newValue);
-        } else {
-            currentDraggedNumberSetting.setValue(newValue);
-        }
+        return newValue;
     }
 
     private boolean isMouseOver(
@@ -462,7 +574,10 @@ public final class ClickGUIScreen extends GuiScreen {
         return false;
     }
 
+    @SuppressWarnings("unused")
     public static Map<Category, Integer> getCategoryColors() {
         return CATEGORY_COLORS;
     }
+
+
 }
