@@ -105,7 +105,7 @@ public class EntitySheep extends EntityAnimal {
 
   protected void entityInit() {
     super.entityInit();
-    this.dataWatcher.addObject(16, new Byte((byte) 0));
+    this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
   }
 
   /** Drop 0-2 items of this living's type */
